fix bug: remove white space at the bottom of the image

--- a/style.css
+++ b/style.css
@@ -160,10 +160,6 @@ p {
     padding-right: 3.875rem;
   }
 
-  .content-container {
-    margin: 2rem 1.96875rem;
-  }
-
   .content-subheading {
     margin-bottom: 1.25rem;
   }
